# bank-accounts

./: .gitignore  README.md  bank_accounts.spec  build_script.py  main.py  pyproject.toml  test_accounts.py
components/: account_form.py  accounts_table.py  appbar_actions.py  forms.py  table_accounts.py
controllers/: account_controller.py  accounts_controller.py  accounts_view_controller.py  main_view_controller.py
data/: .accounts.csv  accounts.csv  accounts.py  accounts_dataframe.py  accounts_manager.py  data.py  reorder.py
tests/: test_accounts_dataframe.py
view/: account_form.py  appbar_actions.py  options.py  table_accounts.py  view.py
view/__pycache__/: account_form.cpython-310.pyc.2586237495632  table_accounts.cpython-310.pyc.2127976753488  view.cpython-310.pyc.2873153382736
