[tool.poetry]
name = "bank-accounts"
version = "0.1.0"
description = ""
authors = ["Carlos Alberto Baltazar Hinojosa <A840159943@my.uvm.edu.mx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.23.2"
pandas = "^2.2.2"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
